--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "next": "15.1.7"
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
-    "typescript": "5.7.3",
+    "@eslint/eslintrc": "3.2.0",
     "@types/node": "22.13.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "postcss": "8.5.3",
-    "tailwindcss": "3.4.1",
     "eslint": "9.20.1",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "3.2.0"
+    "postcss": "8.5.3",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.7.3"
   }
 }
